# interviews

./: .gitignore  README.md
alikson/teleport/: my_coomments.txt
alikson/teleport/my_version/: .env.example  README.md  bot.py  extractor.py  pyproject.toml  requirements.txt  settings.py  start_script.sh
alikson/teleport/my_version/logs/: 2021-06-08_00-53-02.txt  2021-08-10_10-10-09.txt
alikson/teleport/my_version/public/-1001173851201/: actual.xls
alikson/teleport/old_version/: README.txt  bot.py  dtohmahov.session  extractor.py  public-server.py  requirements.txt  run-bot.bat  run-bot.sh  run-http.sh  settings.py  settings.py.save
alikson/teleport/old_version/.history/: README_20210106213439.txt
alikson/teleport/old_version/logs/: 2021-06-08_01-00-08.txt  2021-06-08_01-05-04.txt  2021-08-10_19-16-58.txt
alikson/teleport/old_version/public/-1001381147394/: actual.xls
alikson/teleport/old_version/services/: teleport-bot.service  teleport-http.service
fabrique/: .env.example  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
fabrique/api/: serializers.py  services.py  urls.py  views.py
fabrique/nginx/: nginx.conf
fabrique/notification_service/: settings.py  urls.py  wsgi.py
fabrique/notifications/: admin.py  models.py
fabrique/notifications/migrations/: 0001_initial.py  0002_initial.py
fabrique/users/: admin.py  models.py
fabrique/users/management/commands/: create_admin.py
fabrique/users/migrations/: 0001_initial.py
sib/: .dockerignore  .env.example  Dockerfile  README.md  [ТЗ] Junior Python.docx  docker-compose.yaml  manage.py  pyproject.toml
sib/api/: admin.py  models.py  serializers.py  urls.py  views.py
sib/api/management/commands/: database.py
sib/api/migrations/: 0001_initial.py  0002_deal_customer.py
sib/data/: deals_broken.csv  deals_broken2.csv  deals_broken3.csv
sib/nginx/: default.conf
sib/sib/: settings.py  wsgi.py
sib/users/: admin.py  models.py
sib/users/management/commands/: create_admin.py
sib/users/migrations/: 0001_initial.py  0002_alter_user_options.py
